<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_2"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/materi"
            android:drawableRight="@drawable/ic_next"
            android:textSize="30sp"
            android:textStyle="normal"
            android:text="@string/materi"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/forum"
            android:drawableRight="@drawable/ic_next"
            android:textSize="30sp"
            android:textStyle="normal"
            android:text="@string/forum"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/collab"
            android:drawableRight="@drawable/ic_next"
            android:textSize="30sp"
            android:textStyle="normal"
            android:text="@string/chat"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/assign"
            android:drawableRight="@drawable/ic_next"
            android:textSize="30sp"
            android:textStyle="normal"
            android:text="@string/assign"/>
    </android.support.design.widget.AppBarLayout>
