<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MycourseActivity"
    tools:showIn="@layout/app_bar_mycourse">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <Button
                    android:id="@+id/course1"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:text="@string/interaksi_manusia_komputer_10"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/course2"
                    android:layout_marginTop="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:text="@string/metedologi_penelitian_10"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/course3"
                    android:layout_marginTop="300dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:text="@string/pengembangan_perangkat_lunak_10"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/course4"
                    android:layout_marginTop="450dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:text="@string/manajemen_jaringan_mobile_10"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/course5"
                    android:layout_marginTop="600dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:text="@string/pemrosesan_data_tersebar_10"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/course6"
                    android:layout_marginTop="750dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:text="@string/pemograman_mobile_10"
                    android:textSize="20sp"/>
        </FrameLayout>
</ScrollView>